--- a/src/components/Columnas.css
+++ b/src/components/Columnas.css
@@ -1,6 +1,6 @@
 .contenedor-5-columnas {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     /* 5 columnas iguales */
     gap: 0px;
     /* espacio entre columnas */
